--- a/actions.yml
+++ b/actions.yml
@@ -819,6 +819,10 @@ uraimo/run-on-arch-action:
   d94c13912ea685de38fccc1109385b83fd79427d:
     expires_at: 2050-01-01
     tag: v3.0.1
+vapier/coverity-scan-action:
+  2068473c7bdf8c2fb984a6a40ae76ee7facd7a85:
+    expires_at: 2050-01-01
+    tag: v1.8.0
 vimtor/action-zip:
   5f1c4aa587ea41db1110df6a99981dbe19cee310:
     expires_at: 2050-01-01
