--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -153,6 +153,7 @@
 - nanasess/setup-chromedriver@*
 - ncipollo/release-action@1e3e9c6637e5566e185b7ab66f187539c5a76da7
 - ncipollo/release-action@bcfe5470707e8832e12347755757cec0eb3c22af
+- ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b
 - nick-fields/retry@*
 - nwtgck/actions-netlify@ac1cb16858bada08a9c71a81240a85cfc3f72913
 - nwtgck/actions-netlify@4cbaf4c08f1a7bfa537d6113472ef4424e4eb654
