Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -116,8 +116,11 @@ VirtusLab/scala-cli-setup:
     expires_at: 2025-11-01
     tag: v1.8.4
   54cd42adb92642fffd3b04cf9705d2806a3b8a92:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-27
     tag: v1.8.5
+  b1b5d003a3db8e351bbf705ef4378d6b0ff8bf4d:
+    expires_at: 2050-01-01
+    tag: v1.9.0
 actions-cool/check-user-permission:
   '*':
     expires_at: 2025-08-01
