--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -110,6 +110,7 @@
 - gr2m/twitter-together@*
 - graalvm/setup-graalvm@01ed653ac833fe80569f1ef9f25585ba2811baab
 - graalvm/setup-graalvm@7f488cf82a3629ee755e4e97342c01d6bed318fa
+- graalvm/setup-graalvm@7a1da54cb7fdef4ea19f6ecdfa9ecf59dc5a48fe
 - gradle/wrapper-validation-action@*
 - gradle/wrapper-validation-action@f9c9c575b8b21b6485636a91ffecd10e558c62f6
 - gsactions/commit-message-checker@*
