--- a/actions.yml
+++ b/actions.yml
@@ -18,6 +18,10 @@ apache/*:
   '*':
     expires_at: 2025-08-01
     keep: true
+astral-sh/setup-uv:
+  b75a909f75acd358c2196fb9a5f1299a9a8868a4:
+    tag: v6.7.0
+    expires_at: 2050-01-01
 bytedeco/javacpp-presets/.github/actions/*:
   '*':
     expires_at: 2025-08-01
@@ -833,7 +837,3 @@ vmactions/freebsd-vm:
   05856381fab64eeee9b038a0818f6cec649ca17a:
     expires_at: 2050-01-01
     tag: v1.2.3
-astral-sh/setup-uv:
-  '*':
-    expires_at: 2050-01-01
-    keep: true
