--- a/actions.yml
+++ b/actions.yml
@@ -603,8 +603,11 @@ orhun/git-cliff-action:
     expires_at: 2025-10-20
     tag: v4
   98c93442bb05a455a77bee982867857ae748eeea:
-    expires_at: 2050-01-01
+    expires_at: 2025-12-22
     tag: v4.5.1
+  d77b37db2e3f7398432d34b72a12aa3e2ba87e51:
+    expires_at: 2050-01-01
+    tag: v4.6.0
 ossf/scorecard-action:
   '*':
     expires_at: 2025-08-01
