--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -160,6 +160,7 @@
 - oracle-actions/setup-java@*
 - orhun/git-cliff-action@4a4a951bc43fafe41cd2348d181853f52356bee7
 - orhun/git-cliff-action@98c93442bb05a455a77bee982867857ae748eeea
+- orhun/git-cliff-action@d77b37db2e3f7398432d34b72a12aa3e2ba87e51
 - ossf/scorecard-action@*
 - peaceiris/actions-gh-pages@*
 - peaceiris/actions-hugo@*
