Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -227,3 +227,4 @@
 - mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
 - posit-dev/setup-air@63e80dedb6d275c94a3841e15e5ff8691e1ab237
 - vmactions/freebsd-vm@05856381fab64eeee9b038a0818f6cec649ca17a
+- vmactions/freebsd-vm@487ce35b96fae3e60d45b521735f5aa436ecfade
