--- a/actions.yml
+++ b/actions.yml
@@ -851,5 +851,8 @@ posit-dev/setup-air:
     tag: v1.0.0
 vmactions/freebsd-vm:
   05856381fab64eeee9b038a0818f6cec649ca17a:
-    expires_at: 2050-01-01
+    expires_at: 2025-12-22
     tag: v1.2.3
+  487ce35b96fae3e60d45b521735f5aa436ecfade:
+    expires_at: 2050-01-01
+    tag: v1.2.4
