--- a/actions.yml
+++ b/actions.yml
@@ -258,8 +258,11 @@ commit-check/commit-check-action:
     expires_at: 2025-10-27
     tag: v0.9.1
   1968496411d3da2dddc6a6d891ab95eaa9b03ec6:
-    expires_at: 2050-01-01
+    expires_at: 2025-12-22
     tag: v0.9.2
+  04667fa89b3d3feb0f28facf9c5ff944a5500e85:
+    expires_at: 2050-01-01
+    tag: v1
 conda-incubator/setup-miniconda:
   '*':
     expires_at: 2025-08-01
