--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -67,6 +67,7 @@
 - commit-check/commit-check-action@f09ba795622b9cb0d0d5e668926235a1d893c7a4
 - commit-check/commit-check-action@38641d6ac4173719bca74d302f60b429ea89015c
 - commit-check/commit-check-action@1968496411d3da2dddc6a6d891ab95eaa9b03ec6
+- commit-check/commit-check-action@04667fa89b3d3feb0f28facf9c5ff944a5500e85
 - conda-incubator/setup-miniconda@*
 - container-tools/kind-action@*
 - container-tools/microshift-action@*
