--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -192,6 +192,7 @@
 - sbt/setup-sbt@17575ea4e18dd928fe5968dbe32294b97923d65b
 - scacap/action-surefire-report@1a128e49c0585bc0b8e38e541ac3b6e35a5bc727
 - scacap/action-surefire-report@*
+- scacap/action-surefire-report@5609ce4db72c09db044803b344a8968fd1f315da
 - scala-steward-org/scala-steward-action@5021652c555c5724af574758b78ea5be49640007
 - scala-steward-org/scala-steward-action@*
 - scala-steward-org/scala-steward-action@961c41c9fd3dc8a0f1f8dd59d60d071e17348ae8
