--- a/actions.yml
+++ b/actions.yml
@@ -677,8 +677,11 @@ pypa/cibuildwheel:
     expires_at: 2025-11-17
     tag: v3.1.3
   c923d83ad9c1bc00211c5041d0c3f73294ff88f6:
-    expires_at: 2050-01-01
+    expires_at: 2025-12-26
     tag: v3.1.4
+  7c619efba910c04005a835b110b057fc28fd6e93:
+    expires_at: 2050-01-01
+    tag: v3.2.0
 pytooling/actions:
   '*':
     expires_at: 2025-08-01
