Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -720,8 +720,11 @@ sbt/setup-sbt:
     expires_at: 2025-12-01
     tag: v1.1.12
   17575ea4e18dd928fe5968dbe32294b97923d65b:
-    expires_at: 2050-01-01
+    expires_at: 2025-12-29
     tag: v1.1.13
+  3e125ece5c3e5248e18da9ed8d2cce3d335ec8dd:
+    expires_at: 2050-01-01
+    tag: v1.1.14
 scacap/action-surefire-report:
   1a128e49c0585bc0b8e38e541ac3b6e35a5bc727:
     expires_at: 2025-12-22
