--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -193,6 +193,7 @@
 - sbt/setup-sbt@234370af1319038bf8dc432f8a7e4b83078a1781
 - sbt/setup-sbt@f20dc1bc1f8be605c44ffbcec6f17f708a4af9d1
 - sbt/setup-sbt@17575ea4e18dd928fe5968dbe32294b97923d65b
+- sbt/setup-sbt@3e125ece5c3e5248e18da9ed8d2cce3d335ec8dd
 - scacap/action-surefire-report@1a128e49c0585bc0b8e38e541ac3b6e35a5bc727
 - scacap/action-surefire-report@*
 - scacap/action-surefire-report@5609ce4db72c09db044803b344a8968fd1f315da
