--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -44,6 +44,7 @@
 - awalsh128/cache-apt-pkgs-action@*
 - aws-actions/configure-aws-credentials@b47578312673ae6fa5b5096b330d9fbac3d116df
 - aws-actions/configure-aws-credentials@7474bc4690e29a8392af63c5b98e7449536d5c3a
+- aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838
 - azure/setup-helm@b9e51907a09c216f16ebe8536097933489208112
 - azure/setup-helm@1a275c3b69536ee54be43f2070a358922e12c8d4
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
