--- a/actions.yml
+++ b/actions.yml
@@ -340,8 +340,11 @@ eps1lon/actions-label-merge-conflict:
     keep: true
 erisu/apache-rat-action:
   3127a8c18f3bb10e91c60e835144085b31c5c463:
-    expires_at: 2050-01-01
+    expires_at: 2026-01-14
     tag: v1.2.0
+  46fb01ce7d8f76bdcd7ab10e7af46e1ea95ca01c:
+    expires_at: 2050-01-01
+    tag: v2.0.0
 erisu/license-checker-action:
   1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a:
     expires_at: 2050-01-01
