Update approved_patterns.yml and .github/workflows/dummy.yml based on actions.yml
Generated by .github/workflows/update_dummy.yml

--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -2,8 +2,12 @@ name: Dummy Workflow
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * 3"
+  pull_request:
+    paths:
+      - .github/workflows/dummy.yml
+  push:
+    paths:
+      - .github/workflows/dummy.yml
 
 permissions: {}
 
