--- a/actions.yml
+++ b/actions.yml
@@ -496,7 +496,10 @@ leafo/gh-actions-lua:
     keep: true
 leafo/gh-actions-luarocks:
   4c082a5fad45388feaeb0798dbd82dbd7dc65bca:
-    expires_at: 2050-01-01
+    expires_at: 2026-01-26
+    tag: v5
+  97053c556d6ce2c8e26eb7ac93743437c7af7248:
+    expires_at: &id002 2050-01-01
     tag: v5
 manusa/actions-setup-minikube:
   b589f2d61bf96695c546929c72b38563e856059d:
@@ -626,8 +629,11 @@ pypa/cibuildwheel:
     expires_at: 2025-12-26
     tag: v3.1.4
   7c619efba910c04005a835b110b057fc28fd6e93:
-    expires_at: 2050-01-01
+    expires_at: 2026-01-26
     tag: v3.2.0
+  9c00cb4f6b517705a3794b22395aedc36257242c:
+    expires_at: *id002
+    tag: v3.2.1
 pytooling/actions:
   '*':
     expires_at: 2025-08-01
