--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -67,6 +67,7 @@
 - container-tools/microshift-action@*
 - coursier/cache-action@4e2615869d13561d626ed48655e1a39e5b192b3c
 - coursier/cache-action@*
+- coursier/cache-action@bebeeb0e6f48ebad66d3783946588ecf43114433
 - coursier/setup-action@039f736548afa5411c1382f40a5bd9c2d30e0383
 - coursier/setup-action@*
 - cpp-linter/cpp-linter-action@f91c446a32ae3eb9f98fef8c9ed4c7cb613a4f8a
