Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -17,7 +17,10 @@ ana06/get-changed-files:
 astral-sh/setup-uv:
   b75a909f75acd358c2196fb9a5f1299a9a8868a4:
     tag: v6.7.0
+    expires_at: 2026-01-26
+  85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41:
     expires_at: 2050-01-01
+    tag: v7.1.2
 bytedeco/javacpp-presets/.github/actions/*:
   '*':
     expires_at: 2025-08-01
