--- a/actions.yml
+++ b/actions.yml
@@ -318,6 +318,7 @@ docker://pandoc/core:
 docker/setup-qemu-action:
   29109295f81e9208d7d86ff1c6c12d2833863392:
     expires_at: 2050-01-01
+    tag: v3.6.0
     keep: true
 dorny/paths-filter:
   de90cc6fb38fc0963ad72b210f1f284cd68cea36:
