--- a/actions.yml
+++ b/actions.yml
@@ -720,6 +720,10 @@ shufo/auto-assign-reviewer-by-files:
   '*':
     expires_at: 2025-08-01
     keep: true
+sigstore/cosign-installer:
+  faadad0cce49287aee09b3a48701e75088a2c6ad:
+    expires_at: 2026-12-31
+    tag: v4.0.0
 snok/install-poetry:
   76e04a911780d5b312d89783f7b1cd627778900a:
     expires_at: 2050-01-01
