--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -193,6 +193,7 @@
 - swatinem/rust-cache@*
 - swift-actions/setup-swift@*
 - taiki-e/install-action@*
+- tcort/github-action-markdown-link-check@f3d33029dca1c4a24b87e2df648f9f4604ef6533
 - test-summary/action@*
 - timonvs/pr-labeler-action@*
 - untitaker/hyperlink@e66bb17cc9ae341677431edec3b893a0aa6ac747
