--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -27,6 +27,7 @@
 - VirtusLab/scala-cli-setup@54cd42adb92642fffd3b04cf9705d2806a3b8a92
 - VirtusLab/scala-cli-setup@b1b5d003a3db8e351bbf705ef4378d6b0ff8bf4d
 - VirtusLab/scala-cli-setup@77834b5926f3eb70869d8009530c65585f7a039b
+- VirtusLab/scala-cli-setup@68bd9c30954d20e6cb6ddaf01b3b38336f25df4b
 - actions-cool/check-user-permission@*
 - actions-cool/issues-helper@*
 - actions-cool/maintain-one-comment@*
