chore: update erisu/license-checker-action (v2.0.1)

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -89,6 +89,7 @@
 - erisu/apache-rat-action@3127a8c18f3bb10e91c60e835144085b31c5c463
 - erisu/apache-rat-action@46fb01ce7d8f76bdcd7ab10e7af46e1ea95ca01c
 - erisu/license-checker-action@1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a
+- erisu/license-checker-action@99cffa11264fe545fd0baa6c13bca5a00ae608f2
 - gaurav-nelson/github-action-markdown-link-check@*
 - geekyeggo/delete-artifact@*
 - golang/govulncheck-action@*
