--- a/actions.yml
+++ b/actions.yml
@@ -315,7 +315,10 @@ erisu/apache-rat-action:
     tag: v2.0.0
 erisu/license-checker-action:
   1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a:
+    expires_at: 2026-01-01
     tag: v2.0.0
+  99cffa11264fe545fd0baa6c13bca5a00ae608f2:
+    tag: v2.0.1
 gaurav-nelson/github-action-markdown-link-check:
   '*':
     expires_at: 2025-08-01
