--- a/actions.yml
+++ b/actions.yml
@@ -316,6 +316,9 @@ erisu/apache-rat-action:
 erisu/license-checker-action:
   1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a:
     tag: v2.0.0
+    expires_at: 2026-02-14
+  99cffa11264fe545fd0baa6c13bca5a00ae608f2:
+    tag: v2.0.1
 gaurav-nelson/github-action-markdown-link-check:
   '*':
     expires_at: 2025-08-01
