--- a/actions.yml
+++ b/actions.yml
@@ -129,6 +129,9 @@ addnab/docker-run-action:
 al-cheb/configure-pagefile-action:
   a3b6ebd6b634da88790d9c58d4b37a7f4a7b8708:
     tag: v1.4
+    expires_at: 2026-02-22
+  9b6da52fb72a3c6147c1aad2df22d8d905681adc:
+    tag: v1.5
 amannn/action-semantic-pull-request:
   '*':
     expires_at: 2025-08-01
