--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -108,6 +108,7 @@
 - hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd
 - helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b
 - helm/kind-action@a1b0e391336a6ee6713a0583f8c6240d70863de3
+- helm/kind-action@92086f6be054225fa813e0a4b13787fc9088faab
 - houseabsolute/actions-rust-cross@*
 - ilammy/msvc-dev-cmd@*
 - ilammy/setup-nasm@72793074d3c8cdda771dba85f6deafe00623038b
